--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="hello">Hello World, WorldOfGravityActivity!</string>
-    <string name="app_name">WorldOfGravity</string>
+    <string name="app_name">World of Gravity</string>
 
 </resources>
